# ai_news_intelligence

./: .env  .gitignore  Dockerfile  README.md  ai_news_intelligence.code-workspace  build-dbt.sh  docker-compose.yaml  init-db.sh  main.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
ai_news_dbt/: dbt_project.yml
ai_news_dbt/analyses/: article_nlp_data.sql  silver_nlp_articles.sql  silver_sentiment.sql
ai_news_dbt/models/bronze/: properties.yml  test.sql
ai_news_dbt/models/silver/: articles.sql  properties.yml
ai_news_dbt/tests/generic/: between_0_and_100.sql  non_negative.sql
ai_news_streamlit/: config.py  utils.py
ai_news_streamlit/pages/: main_page.py
airflow_ai_news/: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
airflow_ai_news/config/: airflow.cfg
airflow_ai_news/dags/: ingestion_dag.py  nlp_dag.py
airflow_ai_news/src/: config.py  ingestion.py  nlp_processing.py
airflow_ai_news/tests/: test_ingestion.py  test_nlp_processing.py
alembic/: env.py
alembic/versions/: 5455cfa6e8a4_raw_and_processed_tables.py
config/: airflow.cfg
dags/: ingestion_dag.py  nlp_dag.py
dbt_ai_news/: .gitignore  dbt_project.yml
dbt_ai_news/analyses/: article_nlp_data.sql  bronze_content.sql  bronze_feed.sql
dbt_ai_news/models/bronze/: content.sql  feed.sql  properties.yml
dbt_ai_news/models/gold/: daily_summary.sql  entity_trends.sql  properties.yml  source_profiles.sql  topic_trends.sql
dbt_ai_news/models/silver/: articles.sql
src/: config.py  database.py  ingestion.py  main.py  nlp_processing.py  utils.py
src/models/: __init__.py  article_nlp.py  nlp_article.py  raw_article.py  raw_data.py
src/schemas/: nlp_article.py  raw_article.py  raw_data.py
streamlit_ai_news/: config.py  main.py  pyproject.toml  utils.py
streamlit_ai_news/pages/: daily_summary.py  data_exploration.py  entity_trends.py  main_page.py  source_profiles.py  topic_trends.py
transformations/: dbt_project.yml
transformations/models/bronze/: content.sql  feed.sql
