[project]
name = "ai-news-intelligence"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "feedparser>=6.0.12",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.48",
    "torch>=2.10.0",
    "trafilatura>=2.0.0",
    "transformers>=5.3.0",
]

[dependency-groups]
dev = [
    "apache-airflow>=3.1.7",
    "ruff>=0.15.5",
    "ty>=0.0.21",
]
