[project]
name = "ai-news-intelligence"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "boto3>=1.42.86",
    "boto3-stubs[s3]>=1.42.87",
    "dbt-core>=1.11.7",
    "dbt-databricks>=1.10.9",
    "en-core-web-sm",
    "feedparser>=6.0.12",
    "python-dotenv>=1.2.2",
    "spacy>=3.8.11",
    "torch>=2.10.0",
    "trafilatura>=2.0.0",
    "transformers>=5.3.0",
]

[dependency-groups]
dev = [
    "apache-airflow>=3.1.7",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
    "ty>=0.0.21",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
