[project]
name = "airflow-ai-news"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "apache-airflow-providers-amazon>=9.27.0",
    "apache-airflow-providers-databricks>=7.13.0",
    "docker>=7.1.0",
    "en-core-web-sm",
    "feedparser>=6.0.12",
    "python-dotenv>=1.2.2",
    "spacy>=3.8.14",
    "torch>=2.11.0",
    "trafilatura>=2.0.0",
    "transformers>=5.8.0",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }

[dependency-groups]
dev = [
    "apache-airflow>=3.2.1",
    "ty>=0.0.49",
]
